0.3.0-dev
  BugFix: Removed all xbps-install -f (force) commands.
  BugFix: Enable '*' char in the "Search/by file" option.
  BugFix: Void Linux RSS news page was outdated.
  BugFix: Files tab now shows file list of non installed packages.
  BugFix: If there's xbps inside an upgrade, it is upgraded first.
  Added Project Trident support.
  Added Lumina desktop support.
  Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
	(without LXQt libs) and its use is mandatory in OctoXBPS.
  Added Terminal tab to execute actions manually.
  Added new icons to UI.
  Added new menu option "File/Install local package" to install any package available
	on your local repositories.
  Added drag and drop support to drop local ".xbps" packages for installation.
  Added new menu option "Search/Use instant search" to toggle automatic filtering 
	search results on package list.
  Added option to never sync database on notifier.
  Added new context menu option "Info" on pkg list.
  Added more information about packages on Info tab.

0.2.2
  BugFix: Reset ProgressWidget range value to 100, so transactions could update 
	percentages once again.

0.2.1
  BugFix: Clicking notifier hides OctoXBPS when it's running.
  BugFix: Notifier was not starting OctoXBPS when action was triggered.

0.2.0
  BugFix: Block some events while executing a transaction.
  BugFix in parser code.
  BugFix in Files tab retrieve.
  BugFix in 'edit' context menu.
  Now Files tab shows progress bar.
  Faster Transaction dialog and it saves its size between calls.
  Now pkg list shows non installed packages.
  Added an update notifier to OctoXBPS, the OctoXBPS notifier!
  Added shortcut text to all button tooltips.
  Added 'xbps-remove -O' for cache clean in XBPS.
  Added dependencies list for non installed pkgs.
  Added Search by description option in menu.
  Added support for lxqt-sudo (but it removes "run in terminal mode").

0.1.0 
  Initial Proof of Concept release.